# progressive-web-apps-2223

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  update.sh
html/: galaxies.html  manifest.json  serviceworker.js
html/static/: app.js  comments.js
html/static/css/: components.css  defaults.css  overrides.css  style.css  utilities.css
src/: elements.rs  hbs.rs  main.rs
templates/: about.html.hbs  comments.html.hbs  galaxies.html.hbs  index.html.hbs
